[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
packages = [
 { include = "*", from = "src" },
]
authors = ["Kirill Pushkarev <kirillpush@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
exclude = "tests"
